Fix Server Demo Clipping Issue

--- a/src/app/components/pages/services/server/server.component.css
+++ b/src/app/components/pages/services/server/server.component.css
@@ -1,7 +1,8 @@
 .services-server__container {
-  width  : 100%;
-  height : 100%;
-  display: flex;
+  padding-top: 6rem;
+  width      : 100%;
+  height     : 100%;
+  display    : flex;
   ;
   justify-content: center;
   align-items    : center;
